# glibc-shorts

./: CMakeLists.txt  main.cpp
string_h/: copy_string.c  string_compare.c  string_concat.c  string_copy.c  string_length.c
